nginx-static/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-static
  namespace: hello-flux
spec:
  rules:
    - host: 127.0.0.1.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-static
              servicePort: 80
